--- a/src/app/admin/staff-manager/create-staff/create-staff.component.html
+++ b/src/app/admin/staff-manager/create-staff/create-staff.component.html
@@ -100,11 +100,10 @@
                             <label>Vai Trò</label>
                             <div class="form-group">
                                 <div class="form-control form-control-user">
-                                    <select name="subject" [formControlName]="'role'">
-                                        <option disabled="disabled" selected="selected">Lựa Chọn</option>
+                                    <select name="subject" [formControlName]="'role'" [ngModel]="1">
+                                        <option disabled="disabled" [value]="1">Lựa Chọn</option>
                                         <option [value]="true">Admin</option>
                                         <option [value]="false">Super Admin</option>
-                                        <option [value]="3">Khách Hàng</option>
                                     </select>
                                     <div class="select-dropdown"></div>
                                 </div>
