--- a/src/app/admin/staff-manager/update-staff/update-staff.component.html
+++ b/src/app/admin/staff-manager/update-staff/update-staff.component.html
@@ -12,37 +12,35 @@
                         <form class="user" [formGroup]="staffForm" (ngSubmit)="updateStaff()">
                             <div class="form-group">
                                 <label> Email </label>
-                                <input type="email" [formControlName]="'email'" class="form-control form-control-user" id="email" placeholder="" disabled>
+                                <input type="email" [formControlName]="'email'" value="{{staff?.email}}" class="form-control form-control-user" id="email" placeholder="" disabled>
                             </div>
                             <div class="form-group">
                                 <label> Họ và tên </label>
-                                <input type="text" [formControlName]="'name'" class="form-control form-control-user" id="name" placeholder=""  required>
+                                <input type="text" [formControlName]="'name'" value="{{staff?.name}}" class="form-control form-control-user" id="name" placeholder="">
                             </div>                          
                             <div class="form-group">
                                 <label> Số điện thoại </label>
-                                <input type="text" [formControlName]="'phone'" class="form-control form-control-user" id="cardId" placeholder="" required>
+                                <input type="text" [formControlName]="'phone'" value="{{staff?.phone}}" class="form-control form-control-user" id="cardId" placeholder="">
                             </div>
                             <div class="form-group">
                                 <label> Số chứng minh nhân dân - thẻ căn cước </label>
-                                <input type="text" [formControlName]="'cardId'" class="form-control form-control-user" id="phone" placeholder="" required>
+                                <input type="text" [formControlName]="'cardId'" value="{{staff?.cardId}}" class="form-control form-control-user" id="phone" placeholder="">
                             </div>
                             <div class="form-group">
                                 <label> Địa chỉ </label>
-                                <input type="text" [formControlName]="'address'" class="form-control form-control-user" id="address" placeholder="" required>
+                                <input type="text" [formControlName]="'address'" value="{{staff?.address}}" class="form-control form-control-user" id="address" placeholder="">
                             </div>
                             <div class="form-group">
                                 <label> Ngày sinh </label>
-                                <input type="date" [formControlName]="'birthday'" class="form-control form-control-user" id="birthday" placeholder="" required>
+                                <input type="date" [formControlName]="'birthday'" value="{{staff?.birthday | date:'dd/MM/yyyy'}}" class="form-control form-control-user" id="birthday" placeholder="">
                             </div>
                             <div class="form-group row">
-                                <div class="radio-label">
-                                    Giới tính:
-                                </div>
+                                <div class="radio-label"> Giới tính: </div>
                                 <div class="radio">
-                                    <input id="radio-1" type="radio" name="gender"  [value]="true" [formControlName]="'gender'">
+                                    <input id="radio-1" type="radio" name="gender" [formControlName]="'gender'" [ngModel]="staff?.gender" [value]="true">
                                     <label for="radio-1" class="radio-label">Nam </label>
 
-                                    <input id="radio-2" type="radio" name="gender" [value]="false" [formControlName]="'gender'">
+                                    <input id="radio-2" type="radio" name="gender" [formControlName]="'gender'" [ngModel]="staff?.gender" [value]="false">
                                     <label for="radio-2" class="radio-label">Nữ</label>
                                 </div>
                             </div>
@@ -50,11 +48,10 @@
                             <label>Vai Trò</label>
                             <div class="form-group">
                                 <div class="form-control form-control-user">
-                                    <select name="subject" [formControlName]="'role'" required>
-                                        <option disabled="disabled" selected="selected">Lựa Chọn</option>
-                                        <option>Admin</option>
-                                        <option>Super Admin</option>
-                                        <option>Khách Hàng</option>
+                                    <select name="subject" [formControlName]="'role'" [ngModel]="staff?.role">
+                                        <option disabled="disabled" [value]="1">Lựa Chọn</option>
+                                        <option [value]="true">Admin</option>
+                                        <option [value]="false">Super Admin</option>
                                     </select>
                                     <div class="select-dropdown"></div>
                                 </div>
@@ -68,13 +65,7 @@
                             <div class="form-group row">
                                 <div class="col-sm-6 mb-3 mb-sm-0">
                                     <label>Mật khẩu</label>
-                                    <input type="password" class="form-control form-control-user"
-                                        id="pass" placeholder="" required>
-                                </div>
-                                <div class="col-sm-6">
-                                    <label>Nhập lại mật khẩu</label>
-                                    <input type="password" class="form-control form-control-user"
-                                        id="exampleRepeatPassword" placeholder="" required >
+                                    <input type="password" class="form-control form-control-user" id="pass">
                                 </div>
                             </div>
 
