--- a/src/app/admin/staff-manager/update-staff/update-staff.component.html
+++ b/src/app/admin/staff-manager/update-staff/update-staff.component.html
@@ -12,35 +12,35 @@
                         <form class="user" [formGroup]="staffForm" (ngSubmit)="updateStaff()">
                             <div class="form-group">
                                 <label> Email </label>
-                                <input type="email" [formControlName]="'email'" value="{{staff?.email}}" class="form-control form-control-user" id="email" placeholder="" disabled>
+                                <input type="email" [formControlName]="'email'" class="form-control form-control-user" placeholder="" disabled>
                             </div>
                             <div class="form-group">
                                 <label> Họ và tên </label>
-                                <input type="text" [formControlName]="'name'" value="{{staff?.name}}" class="form-control form-control-user" id="name" placeholder="">
+                                <input type="text" [formControlName]="'name'"  class="form-control form-control-user" id="name" placeholder="">
                             </div>                          
                             <div class="form-group">
                                 <label> Số điện thoại </label>
-                                <input type="text" [formControlName]="'phone'" value="{{staff?.phone}}" class="form-control form-control-user" id="cardId" placeholder="">
+                                <input type="text" [formControlName]="'phone'"  class="form-control form-control-user" id="phone" placeholder="">
                             </div>
                             <div class="form-group">
                                 <label> Số chứng minh nhân dân - thẻ căn cước </label>
-                                <input type="text" [formControlName]="'cardId'" value="{{staff?.cardId}}" class="form-control form-control-user" id="phone" placeholder="">
+                                <input type="text" [formControlName]="'cardId'"  class="form-control form-control-user" id="cardId" placeholder="">
                             </div>
                             <div class="form-group">
                                 <label> Địa chỉ </label>
-                                <input type="text" [formControlName]="'address'" value="{{staff?.address}}" class="form-control form-control-user" id="address" placeholder="">
+                                <input type="text" [formControlName]="'address'"  class="form-control form-control-user" id="address" placeholder="">
                             </div>
                             <div class="form-group">
                                 <label> Ngày sinh </label>
-                                <input type="date" [formControlName]="'birthday'" value="{{staff?.birthday | date:'dd/MM/yyyy'}}" class="form-control form-control-user" id="birthday" placeholder="">
+                                <input type="date" [formControlName]="'birthday'" class="form-control form-control-user" id="birthday" placeholder="">
                             </div>
                             <div class="form-group row">
                                 <div class="radio-label"> Giới tính: </div>
                                 <div class="radio">
-                                    <input id="radio-1" type="radio" name="gender" [formControlName]="'gender'" [ngModel]="staff?.gender" [value]="true">
+                                    <input id="radio-1" type="radio" name="gender" [formControlName]="'gender'" [value]="true">
                                     <label for="radio-1" class="radio-label">Nam </label>
 
-                                    <input id="radio-2" type="radio" name="gender" [formControlName]="'gender'" [ngModel]="staff?.gender" [value]="false">
+                                    <input id="radio-2" type="radio" name="gender" [formControlName]="'gender'" [value]="false">
                                     <label for="radio-2" class="radio-label">Nữ</label>
                                 </div>
                             </div>
@@ -48,9 +48,9 @@
                             <label>Vai Trò</label>
                             <div class="form-group">
                                 <div class="form-control form-control-user">
-                                    <select name="subject" [formControlName]="'role'" [ngModel]="staff?.role">
+                                    <select name="subject" [formControlName]="'role'">
                                         <option disabled="disabled" [value]="1">Lựa Chọn</option>
-                                        <option [value]="true">Admin</option>
+                                        <option [value]='true'>Admin</option>
                                         <option [value]="false">Super Admin</option>
                                     </select>
                                     <div class="select-dropdown"></div>
@@ -62,14 +62,8 @@
                                 <input type="file" class="form-control form-control-user"
                                     id="image" placeholder="">
                             </div>
-                            <div class="form-group row">
-                                <div class="col-sm-6 mb-3 mb-sm-0">
-                                    <label>Mật khẩu</label>
-                                    <input type="password" class="form-control form-control-user" id="pass">
-                                </div>
-                            </div>
 
-                            <button type="submit" class="btn btn-primary btn-user btn-block">
+                            <button type="submit" class="btn btn-primary btn-user btn-block" [disabled]="staffForm.invalid">
                                 Cập nhập
                             </button>
                         </form>
