--- a/src/app/admin/article-manager/view-article/view-article.component.html
+++ b/src/app/admin/article-manager/view-article/view-article.component.html
@@ -70,8 +70,8 @@
                                     <td>#{{article.articleId}}</td>
                                     <td>
                                         <div class="post_thumb">
-                                            <a href="https://phongtro123.com/quan-ly/tin-dang.html#" target="_blank">
-                                                <img src="https://cdn.shopify.com/s/files/1/2046/0489/files/WHsalesslider1_x800.jpg?v=1588100286"></a>
+                                           
+                                                <img src="{{article.image}}">
                                         </div>
                                     </td>
                                     <td>
