--- a/src/app/admin/customer-manager/view-customer/view-customer.component.html
+++ b/src/app/admin/customer-manager/view-customer/view-customer.component.html
@@ -16,9 +16,9 @@
 
             <!-- BUTTON THÊM người dùng -->
             <div class="addNguoidung">
-                <a class="btn btn-primary btn-user" routerLink="create-customer">
+                <button class="btn btn-primary btn-user" routerLink="create-customer" [disabled]="true">
                     Thêm Người dùng
-                </a>
+                </button>
             </div>
 
             <!-- ô tìm kiếm -->
