--- a/src/app/admin/newspaper-manager/view-newspaper/view-newspaper.component.html
+++ b/src/app/admin/newspaper-manager/view-newspaper/view-newspaper.component.html
@@ -65,7 +65,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr *ngFor="let new of news">
+                                <tr class="texttr" *ngFor="let new of news">
                                     <td>#{{new.newId}}</td>
                                     <td>
                                         <div class="post_thumb">
