--- a/src/app/admin/newspaper-manager/update-newspaper/update-newspaper.component.html
+++ b/src/app/admin/newspaper-manager/update-newspaper/update-newspaper.component.html
@@ -12,7 +12,7 @@
                         <form class="user" [formGroup]="newsPaperForm" (ngSubmit)="updateNewsPaper()">
                             <div class="form-group">
                                 <label> Mã Nhân Viên </label>
-                                <input type="text" [formControlName]="'staffId'" class="form-control form-control-user" id="staffId">
+                                <input type="text" [formControlName]="'staffId'" class="form-control form-control-user">
                             </div>
 
                             <div class="form-group">
