--- a/src/app/admin/staff-manager/update-staff/update-staff.component.html
+++ b/src/app/admin/staff-manager/update-staff/update-staff.component.html
@@ -50,8 +50,8 @@
                                 <div class="form-control form-control-user">
                                     <select name="subject" [formControlName]="'role'">
                                         <option disabled="disabled" [value]="1">Lựa Chọn</option>
-                                        <option [value]='true'>Admin</option>
-                                        <option [value]="false">Super Admin</option>
+                                        <option [value]='true'>Super Admin</option>
+                                        <option [value]="false">Admin</option>
                                     </select>
                                     <div class="select-dropdown"></div>
                                 </div>
