handle success paypal

--- a/src/app/admin/shared/header/header.component.html
+++ b/src/app/admin/shared/header/header.component.html
@@ -20,7 +20,6 @@
 
     <!-- Topbar Navbar -->
     <ul class="navbar-nav ml-auto">
-
         <!-- Nav Item - Search Dropdown (Visible Only XS) -->
         <li class="nav-item dropdown no-arrow d-sm-none">
             <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button"
@@ -163,7 +162,7 @@
         </li>
 
         <div class="topbar-divider d-none d-sm-block"></div>
-
+        
         <!-- Nav Item - User Information -->
         <li class="nav-item dropdown no-arrow" *ngIf="isLoggedIn">
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
@@ -178,6 +177,10 @@
                 <a class="dropdown-item" href="#">
                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                     Hồ sơ
+                </a>
+                <a class="dropdown-item" routerLink="/client/paypal">
+                    <i class="fas fa-money-bill-wave fa-sm fa-fw mr-2 text-gray-400"></i>
+                    Nạp tiền
                 </a>
                 <a class="dropdown-item" href="#">
                     <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
