--- a/src/app/client/paypal/view-handle-paypal/view-handle-paypal.component.html
+++ b/src/app/client/paypal/view-handle-paypal/view-handle-paypal.component.html
@@ -44,8 +44,8 @@
                     </div>
                 </a>
                 <ul>
-                    <li><span>Mã thành viên:</span> <span style="font-weight: 700;"> 99624</span></li>
-                    <li><span>Số dư:</span> <span style="font-weight: 700;"> 0 đ</span></li>
+                    <li><span>Mã thành viên:</span> <span style="font-weight: 700;"> {{customerModel?.customerId}}</span></li>
+                    <li><span>Số dư:</span> <span style="font-weight: 700;"> {{customerModel?.accountBalance}} đ</span></li>
                 </ul>
                 <a class="btn btn-warning btn-sm mr-1" href="https://phongtro123.com/quan-ly/nap-tien.html">Nạp tiền</a>
                 <a class="btn btn-danger btn-sm" href="https://phongtro123.com/quan-ly/dang-tin-moi.html">Đăng tin</a>
@@ -173,12 +173,12 @@
                             </div>
                         </div>
                         <div class="form-group mt-4">
-                            <p>Hoặc nhập số tiền cần nạp</p>
+                            <p>Hoặc nhập số tiền cần nạp (tối đa: 10.000 usd)</p>
                             <div class="row">
                                 <div class="col-md-5 col-sm-12 col-xs-12">
                                     <div class="js-price-wrapper">
                                         <div class="input-group mb-3">
-                                          <input type="text" class="form-control js-price" [formControlName]="'money'" name="amount_input" placeholder="Nhập số tiền cần nạp">
+                                          <input type="number" class="form-control js-price" [formControlName]="'money'" name="amount_input" placeholder="Nhập số tiền cần nạp">
                                           <div class="input-group-append">
                                             <span class="input-group-text" id="basic-addon2">USD</span>
                                           </div>
@@ -202,7 +202,7 @@
                 </div>
                 <div class="form-group row mb-30">
                     <div class="col-md-6 col-sm-4 col-xs-12">
-                        <button type="submit" name="thanhtoan" class="btn btn-primary btn-block js-btn-hoan-tat">Tiếp tục <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></button>													
+                        <button type="submit" name="thanhtoan" class="btn btn-primary btn-block js-btn-hoan-tat" [disabled]="paypalForm.invalid">Tiếp tục <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></button>													
                     </div>
                 </div>
             </div>
