handle modal-logout.component

--- a/src/app/admin/shared/header/header.component.html
+++ b/src/app/admin/shared/header/header.component.html
@@ -178,8 +178,8 @@
                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                     Hồ sơ
                 </a>
-                <a class="dropdown-item" routerLink="/client/paypal">
-                    <i class="fas fa-money-bill-wave fa-sm fa-fw mr-2 text-gray-400"></i>
+                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#paypal">
+                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                     Nạp tiền
                 </a>
                 <a class="dropdown-item" href="#">
