--- a/src/app/client/paypal/view-handle-paypal/view-handle-paypal.component.html
+++ b/src/app/client/paypal/view-handle-paypal/view-handle-paypal.component.html
@@ -130,45 +130,51 @@
                         <div class="form-group">
                             <p>Chọn nhanh số tiền cần nạp</p>
                             <div class="form-check form-check-inline mr-4 js-btn-group-price">
-                                <input class="form-check-input" type="radio" name="amount" id="radio50000" value="50000" checked="">
-                                <label class="form-check-label" for="radio50000">
-                                50.000 đ
+                                <input class="form-check-input" [formControlName]="'money'" type="radio" name="money" id="radio5" [value]="5" checked="">
+                                <label class="form-check-label" for="radio5">
+                                    5 USD
                                 </label>
                             </div>
                             <div class="form-check form-check-inline mr-4 js-btn-group-price">
-                                <input class="form-check-input" type="radio" name="amount" id="radio100000" value="100000">
-                                <label class="form-check-label" for="radio100000">
-                                100.000 đ
+                                <input class="form-check-input" [formControlName]="'money'" type="radio" name="money" id="radio10" [value]="10">
+                                <label class="form-check-label" for="radio10">
+                                    10 USD
                                 </label>
                             </div>
                             <div class="form-check form-check-inline mr-4 js-btn-group-price">
-                                <input class="form-check-input" type="radio" name="amount" id="radio200000" value="200000">
-                                <label class="form-check-label" for="radio200000">
-                                200.000 đ
+                                <input class="form-check-input" [formControlName]="'money'" type="radio" name="money" id="radio20" [value]="20">
+                                <label class="form-check-label" for="radio20">
+                                    20 USD
                                 </label>
                             </div>
                             <div class="form-check form-check-inline mr-4 js-btn-group-price">
-                                <input class="form-check-input" type="radio" name="amount" id="radio500000" value="500000">
-                                <label class="form-check-label" for="radio500000">
-                                500.000 đ
+                                <input class="form-check-input" [formControlName]="'money'" type="radio" name="money" id="radio50" [value]="50">
+                                <label class="form-check-label" for="radio50">
+                                    50 USD
                                 </label>
                             </div>
                             <div class="form-check form-check-inline mr-4 js-btn-group-price">
-                                <input class="form-check-input" type="radio" name="amount" id="radio1000000" value="1000000">
-                                <label class="form-check-label" for="radio1000000">
-                                1.000.000 đ
+                                <input class="form-check-input" [formControlName]="'money'" type="radio" name="money" id="radio100" [value]="100">
+                                <label class="form-check-label" for="radio100">
+                                    100 USD
                                 </label>
                             </div>
                             <div class="form-check form-check-inline mr-4 js-btn-group-price">
-                                <input class="form-check-input" type="radio" name="amount" id="radio20000000" value="2000000">
-                                <label class="form-check-label" for="radio20000000">
-                                2.000.000 đ
+                                <input class="form-check-input" [formControlName]="'money'" type="radio" name="money" id="radio200" [value]="200">
+                                <label class="form-check-label" for="radio200">
+                                    200 USD
                                 </label>
                             </div>
                             <div class="form-check form-check-inline js-btn-group-price">
-                                <input class="form-check-input" type="radio" name="amount" id="radio50000000" value="5000000">
-                                <label class="form-check-label" for="radio50000000">
-                                5.000.000 đ
+                                <input class="form-check-input" [formControlName]="'money'" type="radio" name="money" id="radio500" [value]="500">
+                                <label class="form-check-label" for="radio500">
+                                    500 USD
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline js-btn-group-price">
+                                <input class="form-check-input" [formControlName]="'money'" type="radio" name="money" id="radio1000" [value]="1000">
+                                <label class="form-check-label" for="radio1000">
+                                    1000 USD
                                 </label>
                             </div>
                         </div>
