cut css bootstrap interface paypal

--- a/src/app/client/paypal/view-handle-paypal/view-handle-paypal.component.html
+++ b/src/app/client/paypal/view-handle-paypal/view-handle-paypal.component.html
@@ -38,8 +38,8 @@
                         <div class="user_avatar"><img src="assets/img/Avarta-min.jpg"></div>
                         <div class="user_meta">
                             <div class="inner">
-                                <div class="user_name">Phạm Thanh Bình</div>
-                                <div class="user_verify" style="color: #555; font-size: 0.9rem;">0365834845</div>
+                                <div class="user_name">{{customerModel?.name}}</div>
+                                <div class="user_verify" style="color: #555; font-size: 0.9rem;">{{customerModel?.phone}}</div>
                             </div>
                         </div>
                     </a>
